fix(button): add overflow:hidden again

--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -21,7 +21,6 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 1em;
-    margin-top: 1em;
 }
 
 .timers {
